force-app/main/default/objects/River_Integration_Credential__mdt/River_Integration_Credential__mdt.object-meta.xml
<CustomObject>
    <description>Client Id and secret for Website integration</description>
    <label>River Integration Credential</label>
    <pluralLabel>River Integration Credentials</pluralLabel>
</CustomObject>