force-app/main/default/objects/River_Integration_Credential__mdt/fields/Actual_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Actual_Endpoint_URL__c</fullName>
    <label>Actual Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>