force-app/main/default/objects/River_Integration_Credential__mdt/fields/Authentication_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Endpoint_URL__c</fullName>
    <label>Authentication Endpoint URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>